# ClaudeCodeBootstrap

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
cc_bootstrap/: __init__.py  config.py  file_system_utils.py  llm_interface.py  main.py  smithery_client.py
cc_bootstrap/analyzers/: __init__.py  context_builder.py  directory_analyzer.py  file_sampler.py
cc_bootstrap/cli/: __init__.py  app.py  formatters.py  interactive.py  progress.py
cc_bootstrap/dynamic/: __init__.py  command_generator.py  config_generator.py  doc_generator.py  workflow.py
cc_bootstrap/providers/: __init__.py  anthropic_provider.py  base_provider.py  bedrock_provider.py  provider_factory.py
cc_bootstrap/research/: __init__.py  perplexity_client.py  question_generator.py
cc_bootstrap/templates/: __init__.py
cc_bootstrap/templates/defaults/: settings.json
cc_bootstrap/templates/prompts/: action_plan_single.j2  action_plan_squad.j2  all_custom_commands.j2  claude_md.j2  custom_command.j2  generate_research_questions.j2  mcp_config.j2
